bug fixed : overflow problem of menu

--- a/main.css
+++ b/main.css
@@ -13,6 +13,12 @@ html {
   background-attachment: fixed;
 }
 
+.body-page {
+  width: 100vw;
+  overflow-x: hidden;
+  height: 100vh;
+}
+
 ul {
   list-style: none;
 }
@@ -60,6 +66,8 @@ a {
   align-items: center;
   justify-content: center;
   gap: 20px;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .header-nav-item--active {
@@ -96,6 +104,69 @@ a {
   transform: rotate(45deg) translateX(-7px);
 }
 
+@media screen and (min-width: 769px) {
+  .menu-container {
+    display: none;
+  }
+  .login-container {
+    height: 70%;
+    gap: 20px;
+  }
+  .form-login-section {
+    margin-top: 100px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .header-nav {
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+  .header-nav.toggle-menu {
+    left: 0;
+    background-color: black;
+  }
+  .header-nav-container--flex {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+  }
+  .header-nav-container--flex .header-nav-item {
+    padding: 10px;
+    font-size: large;
+  }
+  .notification-section {
+    width: 100%;
+  }
+  .request-item {
+    max-width: 250px;
+    background-color: rgba(4, 4, 4, 0.234);
+    -webkit-backdrop-filter: blur(50px);
+            backdrop-filter: blur(50px);
+    border-radius: 16px;
+    margin-top: 10px;
+    flex-shrink: 0;
+    min-width: 250px;
+    margin-bottom: 20px;
+  }
+  .text-login-title-section {
+    padding-top: 0;
+  }
+  .notification-section.toggle-notifications {
+    width: 100vw;
+  }
+}
 .search-bar-section {
   display: flex;
   flex-direction: row;
@@ -125,7 +196,6 @@ a {
 
 label[for=input-search-bar] {
   margin-right: 10px;
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   height: 100%;
@@ -194,14 +264,12 @@ label[for=input-search-bar] {
 
 .notification-container {
   background-color: rgba(66, 66, 66, 0.637);
-  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   margin-top: 60px;
 }
 
 .notification-inner {
-  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
 }
@@ -395,14 +463,12 @@ article.request-card-container {
 
 .card-icon-comments {
   cursor: pointer;
-  width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
   margin-bottom: 10px;
 }
 
 .comment-text-section {
-  height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   width: 100%;
@@ -671,65 +737,4 @@ figcaption.brand-caption {
 }
 #form-login label.inputError {
   display: block;
-}
-
-@media screen and (min-width: 769px) {
-  .menu-container {
-    display: none;
-  }
-  .login-container {
-    height: 70%;
-    gap: 20px;
-  }
-  .form-login-section {
-    margin-top: 100px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .header-nav {
-    width: 100vw;
-    height: 100vh;
-    position: fixed;
-    top: 0;
-    left: 100%;
-    display: flex;
-    flex-direction: column;
-  }
-  .header-nav.toggle-menu {
-    left: 0;
-    background-color: black;
-  }
-  .header-nav-container--flex {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100%;
-    background-color: rgb(0, 0, 0);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
-  }
-  .header-nav-container--flex .header-nav-item {
-    padding: 10px;
-    font-size: large;
-  }
-  .notification-section {
-    width: 100%;
-  }
-  .request-item {
-    max-width: 250px;
-    background-color: rgba(4, 4, 4, 0.234);
-    -webkit-backdrop-filter: blur(50px);
-            backdrop-filter: blur(50px);
-    border-radius: 16px;
-    margin-top: 10px;
-    flex-shrink: 0;
-    min-width: 250px;
-    margin-bottom: 20px;
-  }
-  .text-login-title-section {
-    padding-top: 0;
-  }
 }/*# sourceMappingURL=main.css.map */
