--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -7,7 +7,7 @@
     height: 60px;
     background-color: rgba(0, 0, 0, 0.116);
     backdrop-filter: blur(8px);
-    
+   
 }
 
 .brand{
@@ -16,6 +16,8 @@
 
 .header-nav-container--flex{
     @include flex(row,center,center,20px);
+    max-width: 100vw;
+   overflow: hidden;
 }
 
 
