--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -15,6 +15,13 @@ html{
 }
 
 
+.body-page{
+    width: 100vw;
+    overflow-x: hidden;
+    height: 100vh;
+}
+
+
 ul{
     list-style: none;
 }
@@ -23,3 +30,4 @@ a{
     text-decoration: none;
     color: aliceblue;
 }
+
