--- a/sass/_responsive.scss
+++ b/sass/_responsive.scss
@@ -1,24 +1,21 @@
-@media screen and(min-width:769px){
-    
-    .menu-container{
-        display: none;
-    }
-
-    .login-container{
-       height: 70%;
-         gap: 20px;
-      }
-
-      .form-login-section{
-        margin-top: 100px;
-      }
-}
+@media screen and (min-width:769px){
+  
+     .menu-container{
+         display: none;
+     }
+     .login-container{
+        height: 70%;
+          gap: 20px;
+       }
+       .form-login-section{
+         margin-top: 100px;
+       }
+ }
 
 
 
-@media screen and(max-width:768px){
+@media screen and (max-width: 768px){
 
-    
 
     .header-nav{
         width: 100vw;
@@ -33,8 +30,8 @@
             &.toggle-menu{
                 left: 0;
                background-color: black;
-            }
-        
+         }
+     
     }
 
 
@@ -48,14 +45,13 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-      
         gap: 30px;
 
-                .header-nav-item{
-                    padding: 10px;
-                    font-size: large;
-                }
-    }
+                 .header-nav-item{
+                     padding: 10px;
+                     font-size: large;
+                 }
+     }
 
    
 
@@ -77,13 +73,15 @@
     }
 
 
-    .text-login-title-section{
+   .text-login-title-section{
         padding-top: 0;
-    }
+         }
    
+         .notification-section.toggle-notifications{
+            width: 100vw;
+         }
     
-    
-}
+ }
 
 
 
